# Python-tutorial

./: transaction2.xlsx  transactions.xlsx
7Hours Django course/studybud/: db.sqlite3
Arithmetic/: app.py
AutomationSpreadsheet/: app.py
BuitInModule/: app.py  dice.py
Class/: app.py  excercise.py  test.py
ComparisonOperators/: app.py
Conditional/: app.py
Design Patterns/Creational Patterns/: factoryMethod.py
Dictionaries/: app.py  emoji_converter.py  numbers_to_word.py
FastApi/: main.py
Files and Directories/: app.py
ForLoops/: app.py
HelloWorld/: app.py
Inheritance/: app.py  excersice.py
Input/: app.py
List/: app.py
List/List Functions/: app.py  test.py
LogicalOperators/: app.py
Modules/: app.py
Modules/excercise/: app.py  utils.py
NestedLoops/: app.py
NestedLoops/exercise/: app.py
Practical Machine learning/: regression.py
ProjectOne-Weight Converter/: app.py
Strings/: app.py  formated_strings.py  string_methods.py
Turples/: app.py
TypeConversion/: app.py
While Loop/: app.py
django/: db.sqlite3
django/products/: urls.py  views.py
drf/: requirements.txt
exceptionHandling/: app.py
functions/: app.py  keyword_arguments.py  return_statement.py  reuseable_functions.py
machine learning/: Persistingamodel.ipynb  visualizedecisiontree.ipynb
mathFunction/: app.py
python Types/: app.py
smart course/: .gitignore  main.py  pyproject.toml
smart course/api/: courses.py  sections.py  users.py
smart course/db/: db_setup.py
smart course/db/models/: user.py
unpacking/: app.py
variables/: app.py
(+29 files in other folders)
